# ecli

./: Cargo.toml  README.md
cmd/: default.csv  default.toml
hurls/: default_toml.hurl
src/: cli.rs  cli_parser.rs  cmd.rs  config.rs  deserializer.rs  executor.rs  fzf.rs  lib.rs  main.rs
