[package]
name = "fsf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
csv = "1.3.0"
directories = "5.0.1"
handlebars = "4.4.0"
open = "5.0.0"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.190", features = ["derive"] }
skim = "0.10.4"
