[package]
name = "fsf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
directories = "5.0.1"
open = "5.0.0"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.190", features = ["derive"] }
skim = "0.10.4"
tera = "1.19.1"
toml = "0.8.6"
