[package]
name = "fsf"
version = "0.1.0"
edition = "2021"
description = "The Fast Shell Finder, find and execute simple to complex commands quickly and easily"
readme = "README.md"
repository = "https://github.com/WolfEYc/fsf"
license = "MIT"
keywords = ["posix", "unix", "shell", "fzf", "fuzzy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
color-eyre = "0.6.2"
colored = "2.0.4"
directories = "5.0.1"
open = "5.0.0"
prettytable-rs = "0.10.0"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.190", features = ["derive"] }
skim = "0.10.4"
tera = "1.19.1"
tokio = { version = "1.33.0", features = ["full"] }
toml = "0.8.6"
url = "2.4.1"
